--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "scripts": {
@@ -16,7 +17,23 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {},
-  "keywords": ["student-management", "react", "context", "localstorage"],
-  "license": "MIT"
+  "keywords": [
+    "student-management",
+    "react",
+    "context",
+    "localstorage"
+  ],
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
