--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "script": "^0.1.4",
     "scripts": "^0.1.0",
     "uuid": "^9.0.1"
   },
