--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "A full Student Management System built using React 18, Context API, LocalStorage, and modern UI.",
   "dependencies": {
+    "rea": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
